bat.bool1.diff21.Diff21.scala.error
Compilation error:
Diff21:5: error: ';' expected but 'else' found.
  else
  ^